# POCHPC

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  conan_profile_linux  conanfile.txt  setup.ps1
cpp/: CMakeLists.txt  CMakeSettings.json
cpp/3rdParties/: CMakeLists.txt
cpp/3rdParties/proxyInclude/: backward  benchmark  eigen  gtest  spdlog
cpp/AuroraAPI/: CMakeLists.txt  Factorial.cpp  Factorial.h  FactorialTest.cpp  Fitness.cpp  Fitness.h  Simulation.cpp  Simulation.h  SimulationTest.cpp
cpp/AuroraCLI/: CMakeLists.txt  main.cpp
cpp/MDD/: CMakeLists.txt  OptTraced.h  OptTracedTests.cpp  Types.h
cpp/Validator/: CMakeLists.txt  PerformanceValidator.h  PerformanceValidatorTest.cpp  Validator.cpp  Validator.h  ValidatorPerfTest.cpp  ValidatorTest.cpp
cpp/Validator/data/NominalCase/: dump_mat
cpp/Validator/data/ZerosCase/: dump_mat
setup/config/: config.xml
sources/3rdParties/spdlog-1.x/include/spdlog/fmt/: chrono.h  ranges.h
sources/CLI/: CMakeLists.txt  main.cpp
sources/Model/: CMakeLists.txt
sources/Model/include/Model/: Factorial.h
sources/Model/sources/Model/: Factorial.cpp
sources/Model/tests/: FactorialTest.cpp
sources/Validation/: CMakeLists.txt
sources/Validation/include/Validation/: Validator.h
sources/Validation/sources/Validation/: Validator.cpp
sources/Validation/tests/: ValidatorTest.cpp
